# AI-policy-simulation-platform-technology-to-solve-social-problems-in-depopulated-areas-based-on-XOps

./: .gitignore  README.md  back.py  pyproject.toml  requirements-all.txt  requirements.txt
archive/: Makefile  old2_vis_types.py  old_res_speed.py  old_vis_types.py
cert/: README.md
certificated_public/: README.md  docker-compose.yml
chart_speed/: chart_speed.py
chart_type/: chart_type.py
data_version/: .gitignore  data_dvc_v0.1.dvc
decline_poc/: .env.example  app.js  (+3 more)
platform/backend/xops-service/: .env.example  main.py  pyproject.toml
platform/backend/xops-service/src/api/: dependencies.py
platform/backend/xops-service/src/api/v3/: dataops.py  monitoring.py  orchestration.py  router.py
platform/backend/xops-service/src/auth/: jwt.py
platform/backend/xops-service/src/core/: exceptions.py  logger.py  seed.py  settings.py
platform/backend/xops-service/src/dataops/: adapters.py  catalog.py  query_builder.py  safety.py  service.py
platform/backend/xops-service/src/mlops/monitoring/: drift.py  explain.py  metrics.py  outliers.py
platform/backend/xops-service/src/mlops/orchestration/: deployer.py  evaluator.py  events.py  orchestrator.py  registry.py
platform/backend/xops-service/src/schemas/: dataops.py  monitoring.py  orchestration.py
platform/backend/xops-service/tests/: conftest.py
platform/backend/xops-service/tests/integration/: test_dataops_api.py  test_enhancements.py  test_monitoring_api.py  test_orchestration_api.py
platform/backend/xops-service/tests/unit/: test_jwt.py  test_mlops_core.py  test_query_builder.py  test_safety.py
(+181 files in other folders)
