[project]
name = "population-decline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "apache-airflow>=3.1.3",
    "fastapi>=0.104.0",
    "minio>=7.2.20",
    "mlflow>=3.6.0",
    "pandas>=2.3.3",
    "polars>=1.35.2",
    "psycopg2>=2.9.11",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "uvicorn[standard]>=0.24.0",
]
