[project]
name = "xops-service"
version = "0.1.0"
description = "DataOps + MLOps 운영 평면 서비스 (인구감소 R&D platform)"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",
]
# 선택: 설치 시 실제 SHAP 사용, 없으면 순수 Python fallback
ml = [
    "numpy>=1.26",
    "shap>=0.44",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
omit = ["tests/*"]

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true
